--- a/index.Rmd
+++ b/index.Rmd
@@ -77,15 +77,15 @@ The regressions show a highly statistically significant, positive relationship b
 
 However, this data set also includes playoff games — which are more complicated. In the playoffs, teams play best of seven. The higher-seeded (and likely stronger) team hosts the first, second, fifth, and seventh game, and the lower-seeded (and likely weaker) team hosts the third, fourth, and sixth game. As a result, the stronger team often plays more games at home. Both teams play the same number of games at home and away if the series goes to four or six games; but if it goes to five or seven games, the higher-seeded teams play more at home. Therefore, higher-seeded/stronger teams disproportionately play at home during the playoffs and lower-seeded/relatively weaker teams disproportionately play away during the playoffs, which could present a possible confounder. Furthermore, regardless of how many games are played at home, the higher-seeded teams play their games earlier in the series — when they could possibly be less tired or less likely to have injured players. This could further bolster the advantage of home teams (on average) during the playoffs.
 
-To evaluate this concern, I ran a bivariate regression and considered the variable Playoffs (described in the Data section) along with whether or not a team was playing at home as my explanatory variables. For both wins and points, this variable had no effect on the “home vs. away” coefficient; playing at home made teams win and score more points at the exact same rates as in the univariate regression, even considering whether a game was a playoff or regular season game.
+To evaluate this concern, I ran a bivariate regression and considered the variable Playoffs (described in the Data section) along with whether or not a team was playing at home as my explanatory variables. For both wins and points, this variable had virtually no effect on the “home vs. away” coefficient. Considering whether a game was a playoff or regular season game, playing at home made teams win and score more points at the same approximate rates as in the univariate regression. And the p-values for the coefficients remained extremely small (<0.001).
 
-Another potential confounder I looked at was when the game was played. The league has made several changes to game play in recent years — such as introducing the Coach’s Challenge in 2019 — that could’ve affected home court bias over time. I ran a bivariate regression that considered the Season along with whether or not a team was playing at home as my explanatory variables. For both wins and points, this variable had no effect on the “home vs. away” coefficient; playing at home made teams win and score more points at the exact same rates as in the univariate regression, even considering the season a game was played. After ruling out these potential confounders — although there may be more that I am missing — I believe that the coefficients that I found represent a causal effect. 
+Another potential confounder I looked at was when the game was played. The league has made several changes to game play in recent years — such as introducing the Coach’s Challenge in 2019 — that could’ve affected home court bias over time. I ran a bivariate regression that considered the Season along with whether or not a team was playing at home as my explanatory variables. For both wins and points, this variable had no effect on the “home vs. away” coefficient. Considering the season a game was played, playing at home made teams win and score more points at the exact same rates as in the univariate regression. Furthermore, the p-values for the coefficients remained extremely small (<0.001). After ruling out these potential confounders — although there may be more that I am missing — I believe that the coefficients that I found represent a causal effect. 
 
 # Conclusion
 
 I found support for my hypotheses that home teams in the NBA (from 2003-2019) won more games and scored more points than visiting teams. According to my analysis, from 2003-2019 in the NBA, teams won about 19% more and scored about 3 more points on average when they played at home. One limit to my analysis was its limited time scope between 2003 and 2019. In the future, I would like to follow up this project with more historical analyses, post-COVID analysis (especially in a few years when there is more data), and analysis of the NBA Bubble during the pandemic. Looking at pandemic games would present analytical challenges (which is why I avoided it in this project), but also the opportunity to analyze games held under a wider variety of conditions than normal (i.e., with and without crowds). 
 
-Other than season and playoff, which I ruled out, I could not come up with any other potential confounding variables. However, I could be overlooking a key confounding variable, which is another potential limitation of my analysis and threat to inference. All of the other factors at play that I brainstormed were not truly confounders, but rather contributors to the home court advantage. For example, as I mentioned in the introduction, visiting teams may be more tired from travel or unforgiving scheduling. I believe that these types of factors that are directly tied to playing at home, even if impactful, would not disprove my argument that teams do better when they play at home. Instead, they represent causes of the advantage and areas for further research. Quantifying the home court advantage is the first step; the next step is asking why it exists (and potentially how it can be minimized). Researchers have made progressive on these questions, but they are still contested and merit further inquiry (Moskowitz & Wertheim, 2012, p. 116-167).
+Other than the variables "season" and "playoff," which I ruled out, I could not come up with any other potential confounding variables. However, I could be overlooking other confounding variables, which is another potential limitation of my analysis and threat to inference. All of the other factors at play that I brainstormed were not truly confounders, but rather contributors to the home court advantage. For example, as I mentioned in the introduction, visiting teams may be more tired from travel or unforgiving scheduling. I believe that these types of factors that are directly tied to playing at home, even if impactful, would not disprove my argument that teams do better when they play at home. Instead, they represent causes of the advantage and areas for further research. Quantifying the home court advantage is the first step; the next step is asking why it exists (and potentially how it can be minimized). Researchers have made progressive on these questions, but they are still contested and merit further inquiry (Moskowitz & Wertheim, 2012, p. 116-167).
 
 # Note
 
